deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: pacman-wcm-deploy
    app: pacman-wcm
  name: pacman-wcm-deploy
  labels:
spec:
  replicas: 1
  selector:
    matchLabels:
      name: pacman-wcm-deploy
  template:
    metadata:
      labels:
        name: pacman-wcm-deploy
    spec:
      serviceAccount: pacman-wcm-sa
      containers:
      - image: docker.io/fdescolpro/pacman:1.0
        imagePullPolicy: IfNotPresent
        name: pacman-wcm-container
        ports:
        - containerPort: 8080
