service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pacman-wcm    
    name: pacman-svc
  name: pacman-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    name: pacman-deploy
  sessionAffinity: None
  type: ClusterIP
