ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: pacman-wcm    
  name: pacman-wcm-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "*"
    nginx.org/server-snippets: "server_name ~^.*\\.?pacman\\.dev-adv\\.net$;"  
    nginx.ingress.kubernetes.io/server-snippet: "location = / { return 200 'healthy'; add_header Content-Type text/plain; }"
spec:
  rules:
  - host: pacman-wcm.dev-adv.net
    http:
      paths:
      - path: /
        backend:
          serviceName: pacman-wcm-svc
          servicePort: 80
