route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  labels:
    app: pacman-wcm    
  name: pacman-wcm-route
spec:
  to:
    kind: Service
    name: pacman-wcm-svc
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
